css/styles.css
body {
    background-color: rgb(3, 45, 38);
    margin: 0px;
    padding: 0px;
}

canvas {
    position: fixed;
    z-index: -1;
    top: 0px;
    left: 0px;
    margin: 0px;
    padding: 0px;
}

.column {
    display: flex;
    width: 70%;
    height: 500px;
    flex-direction: column;
    button {
        min-width: 25vw;
        width: fit-content;
        padding: 10px;
        color: black;
        background-color: rgb(248, 229, 155);
        border-color: white;
        border-radius: 5px;
        border-width: 5px;
        font-size: 30px;
        margin: 10px;
    }
    button:hover {
        background-color: rgb(165, 149, 85);
        border-color: black;
        
    }
    button:active {
        width: 20vw;
        padding: 8px;
        margin: 5px; /*Stops the item above moving downward due to the button shrinking*/
        font-size: 25px;
    }
    h1 {
        font-size: 100px;
        color: rgb(255, 237, 163);
        text-shadow: 0px 6px 1px black;
        margin: 5px;
        padding: 0px;
    }
    h2 {
        font-size: 80px;
        color: rgb(237, 220, 152);
        text-shadow: 0px 6px 1px black;
        margin: 5px;
        padding: 0px;
    }
    h3 {
        font-size: 40px;
        color: rgb(203, 189, 131);
        text-shadow: 0px 6px 1px black;
        margin: 5px;
        padding: 0px;
    }
}

.center {
    display: flex;
    justify-self: center;
    justify-content: center; 
    align-items: center;
}

